@@ -1,3 +1,9 @@
+2019-11-06  Vineet Gupta  <vgupta@synopsys.com>
+
+	* config/arc/arc-c.c (arc_cpu_cpp_builtins) : Add
+	__arc_hard_float__, __ARC_HARD_FLOAT__,
+	__arc_soft_float__, __ARC_SOFT_FLOAT__
+
 2019-11-06  Andre Vieira  <andre.simoesdiasvieira@arm.com>
 
 	PR tree-optimization/92317
